<resources>

    <string name="app_name">LiveStat</string>
    <string name="login_page">Choose User Type</string>
    <string name="manager">Manager</string>
    <string name="statistics_taker">Statistician</string>
    <string name="enter_pin_text_view">Please enter the pin of the game you wish to view</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="go">Go</string>
    <string name="create_a_game_pin_below">Create a game pin below</string>
    <string name="create_game_pin">Create game pin</string>
    <string name="go_to_game">Go to game</string>
    <string name="score">Score</string>
    <string name="puck_out">Puck out</string>
    <string name="free">Frees</string>
    <string name="turnover">Turnover</string>
    <string name="home_goal">Home Goal</string>
    <string name="home_point">Home Point</string>
    <string name="away_goal">Away Goal</string>
    <string name="away_point">Away Point</string>
    <string name="miss">Wide</string>
    <string name="in_play">Kept In</string>
    <string name="won">Ball Won</string>
    <string name="lost">Ball Lost</string>
    <string name="view_stats">View stats</string>
    <string name="goal">Goal</string>
    <string name="point">Point</string>
    <string name="home_puck_won">Won</string>
    <string name="home_puck_lost">Lost</string>
    <string name="home_p">Home Puckout</string>
    <string name="away_p">Away Puckout</string>
    <string name="away_score">Away Score</string>
    <string name="puckout_won">Puckout Won</string>
    <string name="puckouts_lost">Puckouts Lost</string>
    <string name="balls_lost">Balls Lost</string>
    <string name="scored">Scored/Attempts</string>
    <string name="turnovers">Turnovers</string>
    <string name="home_score">Home Score</string>
    <string name="zerodashzero">0&#8211;0</string>
    <string name="zeroslashzero">0/0</string>
    <string name="zeropercent">0%</string>
    <string name="zero">0</string>
    <string name="attempt">Shot</string>
    <string name="missed">Miss</string>
    <string name="plus">+</string>
    <string name="min">-</string>
    <string name="manager_photo">manager photo</string>
    <string name="stat_bar_icon">stat bar icon</string>
    <string name="lock_icon">lock icon</string>
    <string name="home">Home</string>
    <string name="create_game_icon">create_game_icon</string>
    <string name="away_frees">Away Frees</string>
    <string name="home_frees">Home Frees</string>
    <string name="home_puck">Home Puckout</string>
    <string name="away_puck">Away Puckout</string>
    <string name="pitch_view">pitch view</string>
    <string name="area_on_pitch">Area On Pitch</string>
    <string name="away">Away</string>
    <string name="max_score_difference">Max Score Difference</string>
    <string name="_0">0</string>
    <string name="forwards">Forwards</string>
    <string name="backs">Backs</string>
    <string name="where_did_event_happen">Where Did The Event Happen</string>
    <string name="home_shot">HOME SHOT</string>
    <string name="away_shot">AWAY SHOT</string>

</resources>
