<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkbackground"
    >

    <TextView
        android:id="@+id/mainPageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/login_page"
        android:textColor="@color/offwhite"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/managerBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="48dp"
        android:background="@color/lightbackground"
        android:text="@string/manager"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainPageTextView" />

    <Button
        android:id="@+id/statisticsTakerBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="48dp"
        android:background="@color/lightbackground"
        android:text="@string/statistics_taker"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managerBtn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/manager_photo"
        app:layout_constraintStart_toEndOf="@+id/managerBtn"
        app:layout_constraintTop_toBottomOf="@+id/mainPageTextView"
        app:srcCompat="@drawable/manager" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/stat_bar_icon"
        app:layout_constraintStart_toEndOf="@+id/statisticsTakerBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/stats" />


</android.support.constraint.ConstraintLayout>